# Tetrust

./: .gitignore  Cargo.toml  README.md
assets/texture/: blocks.ron  tetris.ron
config/: bindings.ron  display.ron
src/: main.rs  tetris.rs
src/entities/: block.rs  board.rs  mod.rs  position.rs  square.rs
src/events/: block_land.rs
src/resources/: mod.rs  sprite.rs
src/systems/: add_squares.rs  bounce.rs  mod.rs  move_blocks.rs  paddle.rs  remove_lines.rs  render.rs  spawn_blocks.rs  winner.rs
