[package]
name = "tetrust"
version = "0.1.0"
authors = ["Jonas Schmidt <mail@schmidt-jonas.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15.3"
features = ["metal"]

[dependencies]
rand = "0.5.5"

[profile.dev]
debug = 0
